<resources>
    <string name="app_name">Prim</string>
    <string name="app_name_captial">PRIM</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prim_slogan">A Global Virtual Mentoring and\n Content Creation Platform</string>
    <string name="welcome">Welcome!</string>
    <string name="i_m_a_new_user">I\'m a new user,</string>
    <string name="sign_me_up">Sign me up!</string>
    <string name="already_a_user_please">Already a user? Please</string>
    <string name="login_period">Login.</string>
    <string name="close">Close</string>
    <string name="username_help_text">User name must start with a letter and follow with any combination of letters, numbers, periods and underscore with minimum length of 6 characters.</string>
    <string name="gender">Gender</string>
    <string name="valid_name">Please enter a valid name</string>
    <string name="valid_empty_email">Email can\'t be empty</string>
    <string name="valid_empty_otp">OTP can\'t be empty</string>
    <string name="logout">Logout</string>
    <string name="privacy_policy">
        <![CDATA[
            I\'ve read and accept
            <a href="https://www.prim-technology.com/terms-of-service/">Terms of Services</a> &amp;
            <a href="https://www.prim-technology.com/privacy-policy/">Privacy Policy</a>
        ]]>
    </string>
    <string name="forgot_username_description">Please enter the email that was used to create your account. We will email you a temporary one-time code to reset your username.</string>
    <string name="dob">DOB</string>
    <string name="register_now">Register Now</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>
    <string name="email_address">Email Address</string>
    <string name="country">Country</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup_description">Create your account in minutes.</string>
    <string name="forgot_username">Forgot Username</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="forgot_username_password">
        <![CDATA[
            <a href="forgot_username:">Forgot Username</a> or
            <a href="forgot_password:">Password</a>?
        ]]>
    </string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_password_description">Please enter the email that was used to create your account. We will email you a temporary one-time code to reset your password.</string>
    <string name="verification">Verification</string>
    <string name="verify_otp_description">Please type the one-time passcode sent to your registered email address.</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="resend_code">
        <![CDATA[
            Didn’t receive the code yet?
            <a href="resend_code:">Resend Code</a>
        ]]>
    </string>
    <string name="otp_sent_description">Verification OTP was sent to your email.</string>
    <string name="resend_otp_description">We\'ve resent an OTP to your email.</string>
    <string name="valid_empty_username">Username can\'t be empty</string>
    <string name="valid_email">Please enter a valid email</string>
    <string name="valid_password">Please enter password</string>
    <string name="invalid_password">Password length must be equal or greater than 8</string>
    <string name="valid_empty_firstname">Please enter First Name</string>
    <string name="valid_empty_lastname">Please enter Last Name</string>
    <string name="valid_pass_not_match">Password doesn\'t match</string>
    <string name="valid_gender">Please select a valid gender</string>
    <string name="valid_empty_dob">Please select date of birth</string>
    <string name="valid_country">Please select a valid country</string>
    <string name="valid_community_name">Please enter community name</string>
    <string name="valid_community_name_length">Please enter community name upto 100 characters only</string>
    <string name="valid_community_description">Please enter community description</string>
    <string name="valid_community_description_length">Please enter community description upto 500 characters only</string>
    <string name="valid_post_text_length">Please enter post text upto 2000 characters only</string>
    <string name="valid_post_text">Post text can\'t be empty</string>
    <string name="valid_issue_text">Issue message can\'t be empty</string>
    <string name="valid_select_community">Please select community</string>
    <string name="valid_select_category">Please select category</string>
    <string name="valid_empty_job_title">Please enter Job Title</string>
    <string name="valid_empty_job_type">Please enter Job Type</string>
    <string name="valid_empty_company_name">Please enter Company name</string>
    <string name="valid_empty_location">Please enter Location</string>
    <string name="valid_empty_years">Please enter valid years of service</string>
    <string name="valid_empty_months">Please enter valid months of service</string>
    <string name="valid_empty_start_date">Please enter valid start date of service</string>
    <string name="valid_empty_start_date_project">Please enter valid start date of project</string>
    <string name="valid_empty_end_date">Please enter valid end date of service</string>
    <string name="valid_empty_end_date_project">Please enter valid end date of project</string>
    <string name="valid_empty_title">Please enter a valid title</string>
    <string name="valid_empty_description">Please enter a valid description</string>
    <string name="valid_empty_priority">Please enter a valid priority</string>
    <string name="valid_due_date">Please enter a valid due date</string>
    <string name="valid_due_time">Please select time above current date &amp; time</string>
    <string name="privacy_policy_help_text">Please accept terms of service and privacy policy.</string>
    <string name="valid_username">Please enter a valid username</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="account_success">Your account has been created successfully.</string>
    <string name="communities">Communities</string>
    <string name="social">Social</string>
    <string name="lifestyle">Lifestyle</string>
    <string name="business">Business</string>
    <string name="education">Education</string>
    <string name="empty_communities_description">You are not in any community.\nJoin a community to start seeing updates.</string>
    <string name="otp_sent_success">A one-time passcode (OTP) was sent to your registered email.</string>
    <string name="forgot_username_verify_success">Your username was sent to your email.</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="password_reset_success">You have successfully reset your password.</string>
    <string name="password_change_success">You have successfully changed your password.</string>
    <string name="search">Search</string>
    <string name="edit">Edit</string>
    <string name="about">About</string>
    <string name="long_about_text">Software Engineer for the last 18 years. Before this I was a Pre-Med major and I went to the Baylor University for Medicine, but realized it was not for me.</string>
    <string-array name="categories">
        <item>Mentor</item>
        <item>Mentee</item>
    </string-array>
    <string name="join">Join</string>
    <string name="joined">Joined</string>
    <string name="leave">Leave</string>
    <string name="create_community_empty_list_message">Create community to become a \ncommunity moderator.</string>
    <string name="joined_community_empty_list_message">You\'re not in any communities right now. \nJoin a community to start connecting \nwith others to build a mentor-mentee \nrelationship.</string>
    <string name="settings">Settings</string>
    <string name="security">Security</string>
    <string name="help_and_support">Help and Support</string>
    <string name="about_us">About Us</string>
    <string name="about_prim_app">
        <![CDATA[
       <p align="justify">
            PRIM is a community-based virtual mentoring platform with social media capabilities.  We provide real human interaction through our opt-in virtual mentoring in these difficult and challenging times to help improve people\'s lives.  Whether you\'re into social, lifestyle, education, or business, you’ll find an inviting, warm, and supportive communities on PRIM ready to assist you.
        </p>
       <p> Here is why we can be a difference maker:</p>
       * One-on-one direct virtual mentoring<br>
       * Community-based support<br>
       * Provide a "Board of Advisors"<br>
       * Potentially life-changing help for the better<br>
       * Absolutely no cost to PRIM users.</br>
        ]]>
    </string>
    <string name="create_community">Create Community</string>
    <string name="save">Save</string>
    <string name="file_provider_name" translatable="false">.fileProvider</string>
    <string name="select_capture_image">Select or capture image</string>
    <string name="select_capture_video">Select or capture video</string>
    <string name="error_camera_permission">Camera permission are necessary in order to capture image.</string>
    <string name="profile">Profile</string>
    <string name="notifications">Notifications</string>
    <string name="updates">Updates</string>
    <string name="community_description">Community Description</string>
    <string name="community_name">Community Name</string>
    <string name="create_community_success">Community created successfully!</string>
    <string name="visibility_public">Public</string>
    <string name="visibility_public_description">Anyone can see who\'s in the community and what they post.</string>
    <string name="visible">Visible</string>
    <string name="visiblity_description">Anyone can find this group.</string>
    <string name="view_community_history">View Community History</string>
    <string name="members">Members</string>
    <string name="show_all">Show all</string>
    <plurals name="member_count">
        <item quantity="one">%s member</item>
        <item quantity="other">%s members</item>
    </plurals>
    <string name="mention_your_reason_here">Mention your reason here…</string>
    <string name="can_t_accept_at_this_time">Can\'t accept at this time</string>
    <string name="vacation_sabbatical">Vacation / Sabbatical</string>
    <string name="leaving_prim_community">Leaving Prim community</string>
    <string name="personal_other">Personal / Other</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="report_reason_rude_language">It\'s rude, vulgar or uses bad language</string>
    <string name="report_reason_sexual">It\'s sexually explicit</string>
    <string name="report_reason_harassment">It\'s harassment or hate speech</string>
    <string name="report_reason_threatening">It\'s threatening, violent or suicidal</string>
    <string name="report_reason_something_else">Something else</string>
    <string name="report_title">Help us understand the problem</string>
    <string name="would_you_like_to_describe">Would you like to describe the issue? (optional)</string>
    <string name="prim_rewards">Prim Rewards</string>
    <string name="monetization">MONETIZATION</string>
    <string name="dashboard">Dashboard</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="projects_and_contracts"><![CDATA[Projects & Contracts]]></string>
    <string name="terms_of_services">Terms of Service</string>
    <string name="settings_caps">SETTINGS</string>
</resources>