<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="frag"
            type="com.primapp.ui.initial.VerifyOTPFragment" />

        <variable
            name="viewModel"
            type="com.primapp.viewmodels.VerifyOTPViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor"
        android:paddingTop="@dimen/space_systemTopInset">

        <include layout="@layout/toolbar_inner_back" />

        <TextView
            android:id="@+id/tvHeading"
            style="@style/primaryHeadingAccent"
            android:text="@string/verification"
            android:textColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/clToolbar" />

        <TextView
            android:id="@+id/tvDescription"
            style="@style/primaryBodyText"
            android:lineSpacingExtra="@dimen/lineSpaceExtra4"
            android:text="@string/verify_otp_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvHeading" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlEmailAddress"
            style="@style/myTextInputLabel"
            errorText="@{viewModel.errorFieldsLiveData.errorOTP}"
            isRequired="@{true}"
            android:layout_marginTop="@dimen/space_extraLarge"
            android:hint="@string/enter_otp"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDescription">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmailAddress"
                style="@style/editTextInput"
                android:inputType="number"
                android:text="@={viewModel.verifyOTPRequestModel.code}" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnSubmit"
            style="@style/buttonFilledPrimary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_normal"
            android:onClick="@{()->frag.verifyUser()}"
            android:text="@string/submit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tlEmailAddress" />

        <TextView
            android:id="@+id/tvForgotPass"
            htmlText="@{@string/resend_code}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_large"
            android:fontFamily="@font/poppins_regular"
            app:layout_constraintEnd_toEndOf="@id/btnSubmit"
            app:layout_constraintStart_toStartOf="@id/btnSubmit"
            app:layout_constraintTop_toBottomOf="@id/btnSubmit"
            tools:text="@string/resend_code" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>