<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="frag"
            type="com.primapp.ui.initial.ForgotUsernameFragment" />

        <variable
            name="viewModel"
            type="com.primapp.viewmodels.ForgotDataViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor">

        <include layout="@layout/toolbar_inner_back" />

        <TextView
            android:id="@+id/tvHeading"
            style="@style/primaryHeadingAccent"
            android:text="@string/forgot_username"
            android:textColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/clToolbar" />

        <TextView
            android:id="@+id/tvFogotUsernameDescription"
            style="@style/primaryBodyText"
            android:lineSpacingExtra="@dimen/lineSpaceExtra4"
            android:text="@string/forgot_username_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvHeading" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlEmailAddress"
            style="@style/myTextInputLabel"
            errorText="@{viewModel.errorFieldsLiveData.errorEmail}"
            android:layout_marginTop="@dimen/space_extraLarge"
            android:hint="@string/email_address"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvFogotUsernameDescription">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmailAddress"
                style="@style/editTextInput"
                android:inputType="textEmailAddress"
                android:text="@={viewModel.forgotDataModel.email}" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnSubmit"
            style="@style/buttonFilledPrimary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/textExtraLargeX"
            android:onClick="@{()->frag.forgotUsername()}"
            android:text="@string/submit"
            app:layout_constraintEnd_toStartOf="@id/btnSignUp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tlEmailAddress"
            app:layout_constraintWidth_percent=".36" />

        <Button
            android:id="@+id/btnSignUp"
            style="@style/buttonFilledSecondary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="@{()->frag.cancel()}"
            android:text="@string/cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnSubmit"
            app:layout_constraintTop_toTopOf="@id/btnSubmit"
            app:layout_constraintWidth_percent=".36" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>