<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="frag"
            type="com.primapp.ui.notification.MentorRequestRejectionFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor"
        tools:context=".ui.notification.MentorRequestRejectionFragment">

        <include layout="@layout/toolbar_inner_back" />

        <RadioGroup
            android:id="@+id/rgRejectReason"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_medium"
            android:checkedButton="@+id/rbCantAccept"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clToolbar"
            app:layout_constraintWidth_percent=".9">

            <RadioButton
                android:id="@+id/rbCantAccept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/radio_button_selector"
                android:fontFamily="@font/poppins_semibold"
                android:padding="@dimen/space_small"
                android:text="@string/can_t_accept_at_this_time"
                android:textColor="@color/radio_text_color_selector" />

            <RadioButton
                android:id="@+id/rbVacation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/radio_button_selector"
                android:fontFamily="@font/poppins_semibold"
                android:padding="@dimen/space_small"
                android:text="@string/vacation_sabbatical"
                android:textColor="@color/radio_text_color_selector" />

            <RadioButton
                android:id="@+id/rbLeavingCommunity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/radio_button_selector"
                android:fontFamily="@font/poppins_semibold"
                android:padding="@dimen/space_small"
                android:text="@string/leaving_prim_community"
                android:textColor="@color/radio_text_color_selector" />

            <RadioButton
                android:id="@+id/rbOthers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/radio_button_selector"
                android:fontFamily="@font/poppins_semibold"
                android:padding="@dimen/space_small"
                android:text="@string/personal_other"
                android:textColor="@color/radio_text_color_selector" />

        </RadioGroup>

        <EditText
            android:id="@+id/etReason"
            style="@style/editTextSearchBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_normal"
            android:drawableStart="@null"
            android:gravity="top"
            android:hint="@string/mention_your_reason_here"
            android:imeActionLabel="Done"
            android:imeOptions="actionDone"
            android:lines="6"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rgRejectReason"
            app:layout_constraintWidth_percent=".9"
            tools:visibility="visible" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_medium"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etReason"
            tools:visibility="visible" />

        <Button
            android:id="@+id/btnSubmit"
            style="@style/buttonFilledPrimary"
            android:layout_marginTop="@dimen/space_largeX"
            android:onClick="@{()->frag.submitReason()}"
            android:text="@string/submit"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ratingBar" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>